<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/margin_16"
    tools:context=".ui.detail.DetailActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ProgressBar
                    android:id="@+id/progress_bar"
                    android:visibility="gone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="200dp"
                    android:src="@color/teal_200"
                    android:contentDescription="@string/thumbnail"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:id="@+id/img_thumbnail"/>

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    app:layout_constraintEnd_toEndOf="@id/img_thumbnail"
                    app:layout_constraintTop_toTopOf="@id/img_thumbnail"
                    android:id="@+id/img_bg_score"
                    android:background="@drawable/ic_circle_black"
                    android:layout_margin="@dimen/margin_8"/>


                <TextView
                    android:id="@+id/tv_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_16"
                    android:fontFamily="@font/poppins"
                    android:foregroundGravity="center"
                    android:gravity="end"
                    android:text="@string/_75"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="@+id/img_bg_score"
                    app:layout_constraintEnd_toEndOf="@+id/img_bg_score"
                    app:layout_constraintStart_toStartOf="@+id/img_bg_score"
                    app:layout_constraintTop_toTopOf="@+id/img_bg_score" />


                <TextView
                    android:id="@+id/tv_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_16"
                    android:fontFamily="@font/poppins"
                    android:text="@string/title"
                    android:textColor="@color/hitam_pudar"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/img_thumbnail"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_16"
                    android:fontFamily="@font/poppins"
                    android:text="@string/date"
                    android:textColor="@color/asbestos"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/img_thumbnail"
                    app:layout_constraintTop_toBottomOf="@+id/tv_title" />

                <TextView
                    android:id="@+id/tv_genre"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_16"
                    android:fontFamily="@font/poppins"
                    android:text="@string/genre"
                    android:textColor="@color/asbestos"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/img_thumbnail"
                    app:layout_constraintTop_toBottomOf="@+id/tv_date" />

                <TextView
                    android:id="@+id/tv_status"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_16"
                    android:fontFamily="@font/poppins"
                    android:text="@string/status"
                    android:textColor="@color/asbestos"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/img_thumbnail"
                    app:layout_constraintTop_toBottomOf="@+id/tv_genre" />


            </androidx.constraintlayout.widget.ConstraintLayout>
            <TextView
                android:id="@+id/tv_overview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/overview"
                android:fontFamily="@font/poppins"
                android:textStyle="bold"
                android:textSize="24sp"
                android:textColor="@color/hitam_pudar"
                android:layout_marginTop="30dp"/>

            <TextView
                android:id="@+id/tv_overview_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_8"
                android:fontFamily="@font/poppins"
                android:text="@string/overview"
                android:textColor="@color/asbestos"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:clickable="true"
        android:contentDescription="@string/button"
        android:focusable="true"
        android:layout_margin="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_baseline_favorite_24"
        app:tint="@color/white" />

</androidx.constraintlayout.widget.ConstraintLayout>